Fixing facebook widget spacing in production.
It would be nice to find something that works in development mode as well.

--- a/content/css/partials/_global.scss
+++ b/content/css/partials/_global.scss
@@ -428,7 +428,7 @@ a.tag {
     float: left;
   }
 
-  .googleplus {
+  .googleplus, .facebook {
     margin-right: 10px;
   }
 }
